Fix dark mode toggle and make cards fully clickable
- Rebuild main.min.js to include dark mode toggle functionality
- Add ::after pseudo-element to card titles to stretch link over entire card

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -43,6 +43,16 @@
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
 
+  a {
+    // Stretch link to cover entire card for better clickability
+    &::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      z-index: 1;
+    }
+  }
+
   a + a {
     opacity: 0.5;
   }
